updated Signal Recognition

--- a/train_with_db.ipynb
+++ b/train_with_db.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,9 +13,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "No module named signal_data_base",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-ff3b352a4a99>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mSignalRecognition\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcwt_learner\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwavelet_feature_engineering\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mCWT_learner\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msignal_database\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlabelSelectedData\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mSignalDB\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mSignalBundle\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/guru/Dropbox/lab-hp/workspace/research/end_to_end/compliant_action_recognition/SignalRecognition/cwt_learner/wavelet_feature_engineering.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mwavelet_feature_transform\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mWaveletFeatureTransform\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0msignal_data_base\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mSignalDB\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mscipy\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msignal\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: No module named signal_data_base"
+     ],
+     "output_type": "error"
+    }
+   ],
    "source": [
     "from SignalRecognition.cwt_learner.wavelet_feature_engineering import CWT_learner\n",
     "from signal_database.labelSelectedData import SignalDB,SignalBundle"
